--- a/app/views/solicitor/confirm-contact.html
+++ b/app/views/solicitor/confirm-contact.html
@@ -19,25 +19,26 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="contact-applicant">Back</a>
+      <a class="govuk-c-back-link" href="basic-details-playback">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
-
-          <h2 class="govuk-heading-xl">Your client has been contacted</h2>
-
+          <p></p>
+          <h2>You have successfully created a new application</h2>
+          <p></p>
           <form class="form" action="case-dashboard" method="post">
 
             <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
-              <h2 class="govuk-c-panel__title">A link has been sent to your client</h2>
-              <p class="govuk-c-panel__body">Your reference:</p>
-              <p class="govuk-c-panel__body">2018/LAA/4ewrqfdd</p>
-
-              <div class="govuk-c-panel__body">
+              <p class="govuk-c-panel__body">Case reference number:</p>
+              <h2 class="govuk-c-panel__title">2018/LAA/4ewrqfdd</h2>
               </div>
-            </div>
 
-            <input class="govuk-c-button" type="submit" value="Return to your dashboard">
+              <h2 class="govuk-heading-m">
+            We have sent your client a secure link to complete their financial assessment online.
+              </h2>
+
+
+            <input class="govuk-c-button" type="submit" value="Finish">
 
           </form>
         </div>
