Various changes to improve navigation for unguided testing

--- a/app/views/citizen-truelayer/benefits-kind.html
+++ b/app/views/citizen-truelayer/benefits-kind.html
@@ -29,19 +29,19 @@
           Benefits in kind include a company car, travel card or health insurance.
         </p>
 
-        <form class="form" action="identify-outgoings" method="post">
+        <form class="form" action="benefitsinkind" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
+                <input class="govuk-c-radios__input" id="benefitsinkind-1" name="benefitsinkind" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="benefitsinkind-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                <input class="govuk-c-radios__input" id="benefitsinkind-2" name="benefitsinkind" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="benefitsinkind-2">
                 No
               </label>
               </div>
