--- a/app/views/citizen-truelayer/capital-assets.html
+++ b/app/views/citizen-truelayer/capital-assets.html
@@ -25,18 +25,18 @@
           Do you have any other savings or investments?
         </h1>
 
-        <form class="form" action="capitalselect" method="post">
+        <form class="form" action="has-other-capital" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="cap-assets-1" name="cap-assets" type="radio" value="yes" required>
+                <input class="govuk-c-radios__input" id="cap-assets-1" name="hasOtherCapital" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="cap-assets-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="cap-assets-2" name="cap-assets" type="radio" value="no">
+                <input class="govuk-c-radios__input" id="cap-assets-2" name="hasOtherCapital" type="radio" value="no">
                 <label class="govuk-c-label govuk-c-radios__label" for="cap-assets-2">
                 No
               </label>
