--- a/app/views/citizen-truelayer/capitalselect.html
+++ b/app/views/citizen-truelayer/capitalselect.html
@@ -21,7 +21,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="capitalshares" method="post">
+        <form class="form" action="assets" method="get">
 
           <div class="govuk-c-checkboxes">
             <div class="govuk-o-form-group">
@@ -31,32 +31,32 @@
                   <p hidden>Remember to include any shares, assets or savings held by your partner.</p>
                 </legend>
                 <div class="govuk-c-checkboxes__item">
-                  <input class="govuk-c-checkboxes__input" id="nationality-1" name="nationality" type="checkbox" value="british">
-                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-1">
+                  <input class="govuk-c-checkboxes__input" id="nsi" name="assets" type="checkbox" value="nsi">
+                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nsi">
                   National Savings Certificates
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
-                  <input class="govuk-c-checkboxes__input" id="nationality-2" name="nationality" type="checkbox" value="irish">
-                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-2">
+                  <input class="govuk-c-checkboxes__input" id="premium-bonds" name="assets" type="checkbox" value="premium-bonds">
+                  <label class="govuk-c-label govuk-c-checkboxes__label" for="premium-bonds">
                   Premium Bonds
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
-                  <input class="govuk-c-checkboxes__input" id="nationality-1" name="nationality" type="checkbox" value="british">
-                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-1">
+                  <input class="govuk-c-checkboxes__input" id="capital-bonds" name="assets" type="checkbox" value="capital-bonds">
+                  <label class="govuk-c-label govuk-c-checkboxes__label" for="capital-bonds">
                   Capital bonds
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
-                  <input class="govuk-c-checkboxes__input" id="nationality-1" name="nationality" type="checkbox" value="british">
-                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-1">
+                  <input class="govuk-c-checkboxes__input" id="stocks" name="assets" type="checkbox" value="stocks">
+                  <label class="govuk-c-label govuk-c-checkboxes__label" for="stocks">
                   Stocks or shares
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
-                  <input class="govuk-c-checkboxes__input" id="nationality-3" name="nationality" type="checkbox" value="other">
-                  <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-3">
+                  <input class="govuk-c-checkboxes__input" id="other" name="assets" type="checkbox" value="other">
+                  <label class="govuk-c-label govuk-c-checkboxes__label" for="other">
                   Any other savings
                 </label>
                 </div>
