--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -61,7 +61,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href='identify-income-salary-other.html'>Add more income</a>
+            <a href='#'>Add more income</a>
           </div>
           </br>
           </br>
@@ -102,7 +102,7 @@
                 </tr>
               </tbody>
             </table>
-            <a href='identify-outgoings-housing-childcare.html'>Add more outgoings</a>
+            <a href='#'>Add more outgoings</a>
           </div>
           <br>
           <br>
