--- a/app/views/citizen-truelayer/identify-outgoings.html
+++ b/app/views/citizen-truelayer/identify-outgoings.html
@@ -411,7 +411,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-income-salary-other">Back</a>
+    <a class="govuk-c-back-link" href="benefits-kind">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -430,7 +430,7 @@
             <h2 class="task-list-section">
                     <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
-              <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add payments for mortgage, rent, board or lodging, and council tax bills
             </span></p>
             <ul class="task-list-items">
@@ -446,7 +446,7 @@
                     <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
             </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions 
+              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
