--- a/app/views/citizen-truelayer/means-result.html
+++ b/app/views/citizen-truelayer/means-result.html
@@ -16,7 +16,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="capitalshares">Back</a>
+    <a class="govuk-c-back-link" href="other-savings">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -25,21 +25,25 @@
 
         <h1>Provisional result</h1>
         <br>
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00"> 
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
           <div class="govuk-c-panel__body">
             You will have to make a contribution of
-            </div>  
-            <br>
+          </div>
+          <br>
           <h2 class="govuk-c-panel__title">
-            £123.22 a month
+            £255.00 a month
           </h2>
           <div class="govuk-c-panel__body">
-            for 6 months
-          </div> 
+            for 6 months, or a single payment of
+          </div>
+          <br>
+          <h2 class="govuk-c-panel__title">
+            £1275.00
+          </h2>
         </div>
 
         <p class="govuk-body">
-        Your legal aid contributions are based on the following information.
+          Your legal aid contributions are based on the following information.
         </p>
 
         <h3 class="govuk-heading">
