--- a/app/views/citizen-truelayer/capitalshares.html
+++ b/app/views/citizen-truelayer/capitalshares.html
@@ -1,43 +1,98 @@
 {% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
-<div class="govuk-o-width-container">
+<head>
 
-  <div class="govuk-c-phase-banner">
-    <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
+  <script src="../public/javascripts/jquery-1.11.3.js"></script>
+
+  <style>
+    .hideMe {
+      display: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="govuk-o-width-container">
+
+    <div class="govuk-c-phase-banner">
+      <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
         alpha
       </strong>
-      <span class="govuk-c-phase-banner__text">
+        <span class="govuk-c-phase-banner__text">
         This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
       </span>
-    </p>
-  </div>
+      </p>
+    </div>
 
-  <main role="main" class="govuk-o-main-wrapper">
+    <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="capitalselect">Back</a>
+      <a class="govuk-c-back-link" href="capitalselect">Back</a>
 
-    <p class="govuk-body"></p>
+      <p class="govuk-body"></p>
 
-    <div class="govuk-o-grid">
-      <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+      <div class="govuk-o-grid">
+        <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-xl">
           How much are your savings and investments worth?
         </h1>
-        <form class="form" action="means-result" method="post">
 
-          <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-insurance-number">
-            <h3>Enter the value of your stocks or shares</h3>
+          <form class="form" action="means-result" method="post">
 
+            <div class="govuk-o-form-group hideMe" id="nsi"><label class="govuk-c-label" for="nsi">
+            <h3>Enter the value of your National Savings Certificates</h3>
           </label> <br>£
-            <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
-          </div>
-          <input class="govuk-c-button" type="submit" value="Continue">
+              <input class="govuk-c-input govuk-!-width-two-thirds" placeholder="0.00" type="number">
+            </div>
 
-        </form>
+            <div class="govuk-o-form-group hideMe" id="premium-bonds"><label class="govuk-c-label" for="premium">
+            <h3>Enter the value of your Premium Bonds</h3>
+          </label> <br>£
+              <input class="govuk-c-input govuk-!-width-two-thirds" placeholder="0.00" type="number">
+            </div>
+
+            <div class="govuk-o-form-group hideMe" id="capital-bonds"><label class="govuk-c-label" for="capital">
+            <h3>Enter the value of your capital bonds</h3>
+          </label> <br>£
+              <input class="govuk-c-input govuk-!-width-two-thirds" placeholder="0.00" type="number">
+            </div>
+
+            <div class="govuk-o-form-group hideMe" id="stocks"><label class="govuk-c-label" for="stocks">
+            <h3>Enter the value of your stocks or shares</h3>
+          </label> <br>£
+              <input class="govuk-c-input govuk-!-width-two-thirds" placeholder="0.00" type="number">
+            </div>
+
+            <div class="govuk-o-form-group hideMe" id="other"><label class="govuk-c-label" for="other">
+            <h3>Enter the value of any other savings you have</h3>
+          </label> <br>£
+              <input class="govuk-c-input govuk-!-width-two-thirds" placeholder="0.00" type="number">
+            </div>
+
+            <input class="govuk-c-button" type="submit" value="Continue">
+
+          </form>
+        </div>
       </div>
-    </div>
-  </main>
-</div>
+    </main>
+  </div>
 
+  <script>
+    $(document).ready(function() {
+      console.log('here');
+
+      var assets = "{{assets}}".split(',');
+
+      console.log(assets);
+
+      for (var i in assets) {
+        console.log(assets[i]);
+        $("#" + assets[i]).removeClass('hideMe');
+
+      };
+
+      //    $("#nsi").removeClass('hideMe');
+    });
+  </script>
+</body>
 {% endblock %}
