--- a/app/views/citizen-truelayer/dwpdetails.html
+++ b/app/views/citizen-truelayer/dwpdetails.html
@@ -26,7 +26,7 @@
 
         <p class="govuk-body">We will contact the Department for Work and Pensions to check if you are getting benefits.</p>
 
-        <form class="form" action="obbank" method="post">
+        <form class="form" action="ob-consent" method="get">
 
           <label class="govuk-c-label" for="national-insurance-number">
             Enter your National Insurance number
