--- a/app/views/citizen-truelayer/obconsent.html
+++ b/app/views/citizen-truelayer/obconsent.html
@@ -21,7 +21,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="dwpdetails" method="post">
+        <form class="form" action="dwp-consent" method="get">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
@@ -37,16 +37,16 @@
 
               </br>
               <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
+                <input class="govuk-c-checkboxes__input" id="dwp" name="consent" value="dwp" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="dwp">
                   <b>I agree for you to check my tax and benefits status</b><br>
                       using my National Insurance number and date of birth
                 </label>
               </div>
               </br>
               <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
+                <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
                   <b>I agree for you to check 3 months of bank transactions</b><br>
                       using temporary access to my online banking
                 </label>
