--- a/app/views/citizen-truelayer/other-savings.html
+++ b/app/views/citizen-truelayer/other-savings.html
@@ -4,17 +4,17 @@
 
   <div class="govuk-c-phase-banner">
     <p class="govuk-c-phase-banner__content"><strong class="govuk-c-tag govuk-c-phase-banner__content__tag ">
-      alpha
-    </strong>
+        alpha
+      </strong>
       <span class="govuk-c-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-    </span>
+        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      </span>
     </p>
   </div>
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="check-evidence">Back</a>
+    <a class="govuk-c-back-link" href="stocks-shares-amount">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -22,22 +22,22 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you own your home, either outright or with a mortgage?
+          Do you have any other savings?
         </h1>
 
-        <form class="form" action="ownsproperty" method="get">
+        <form class="form" action="has-other-savings" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="ownsproperty-1" name="ownsproperty" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="ownsproperty-1">
+                <input class="govuk-c-radios__input" id="os-1" name="hasOtherSavings" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="os-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="ownsproperty-2" name="ownsproperty" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="ownsproperty-2">
+                <input class="govuk-c-radios__input" id="os-2" name="hasOtherSavings" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="os-2">
                 No
               </label>
               </div>
@@ -45,7 +45,9 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">
+
         </form>
+
       </div>
     </div>
   </main>
