--- a/app/views/solicitor/enter-NI.html
+++ b/app/views/solicitor/enter-NI.html
@@ -29,9 +29,9 @@
             Enter your client's National Insurance number and date of birth
           </h2>
 
-          <form class="form" action="benefits-result" method="post">
+          <form class="form" action="dwp-search" method="get">
 
-            
+
             <label class="govuk-c-label" for="email" type="email">
               Enter National Insurance number
               <span class="govuk-c-label__hint govuk-!-width-two-thirds">
