--- a/app/views/solicitor/start.html
+++ b/app/views/solicitor/start.html
@@ -25,7 +25,7 @@
           <p></p>
           <h2 class="govuk-heading-xl">What do you want to do?</h2>
 
-          <form action="/solicitor/newOrResume" method="get">
+          <form action="/solicitor/application-type" method="get">
 
             <div class="govuk-c-radios">
               </br>
